2006-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/projsplit-dialog.glade:
	* lib/gaupol/gtk/delegate/fileopen.py:
	* lib/gaupol/gtk/dialog/projsplit.py:
	* lib/gaupol/gtk/dialog/test/test_projsplit.py:
	  Implemented project splitting.

2006-07-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegate/filesave.py:
	  (_restore_original): Catch OSError as well.

2006-07-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui/menubar.xml:
	* lib/gaupol/gtk/delegate/edit.py:
	* lib/gaupol/gtk/delegate/fileopen.py:
	* lib/gaupol/gtk/delegate/filesave.py:
	* lib/gaupol/gtk/delegate/position.py:
	* lib/gaupol/gtk/delegate/test/test_edit.py:
	* lib/gaupol/gtk/delegate/test/test_fileopen.py:
	* lib/gaupol/gtk/delegate/test/test_filesave.py:
	* lib/gaupol/gtk/dialog/file.py:
	* lib/gaupol/gtk/dialog/test/test_file.py:
	  Implemented file appending.
	  Moved some stuff around.

2006-07-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.6.0.

	RELEASE 0.6.0.

2006-07-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py:
	  Clean .pyo files as well if such exist.

2006-07-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegate/fileopen.py:
	* lib/gaupol/gtk/delegate/fileopen.py:
	* lib/gaupol/gtk/dialog/file.py:
	* lib/gaupol/gtk/dialog/test/test_file.py:
	* lib/gaupol/gtk/util/conf.py:
	  Implemented smart translation file opening.

2006-07-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegate/appupdate.py:
	  Removed bizarre notebook focus grabbing when next or previous
	  page activated.

	* lib/gaupol/gtk/dialog/duradjust.py:
	* lib/gaupol/gtk/dialog/find.py:
	* lib/gaupol/gtk/dialog/posadjust.py:
	* lib/gaupol/gtk/dialog/posshift.py:
	* lib/gaupol/gtk/dialog/subinsert.py:
	  Fixed sensitivity initializations and selected target radios
	  being both active and insensitive.

2006-07-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui/menubar.xml:
	* data/ui/popups.xml: